feat: initial selected pattern specified in app config

--- a/public/app_config.json
+++ b/public/app_config.json
@@ -1,4 +1,7 @@
 {
+    "defaultSelectedPatternFamillyIndex": 1,
+    "defaultSelectedPatternIndex": 0,
+    "defaultSelectedTabIndex": 0,
     "patternFamillies": [
         {
             "patternFamillyName": "Creational",
