--- a/public/creational_patterns/builder/builder_config.json
+++ b/public/creational_patterns/builder/builder_config.json
@@ -30,42 +30,49 @@
                 "label": "Builder class name",
                 "defaultValue": "Builder",
                 "replace": "$BUILDER_CLASSNAME$",
-                "filename": ""
+                "filename": []
             },
             {
                 "shouldBeVisible": true,
                 "label": "Builder methods",
                 "defaultValue": "void buildPartA();\nvoid buildPartB();",
                 "replace": "$BUILDER_METHODS$",
-                "filename": ""
+                "filename": []
             },
             {
                 "shouldBeVisible": false,
                 "label": "Builder methods extended",
                 "defaultValue": "$BUILDER_METHODS$",
                 "replace": "$BUILDER_METHODS_EXTENDED$",
-                "filename": ""
+                "filename": []
             },
             {
                 "shouldBeVisible": true,
                 "label": "Director class name",
                 "defaultValue": "Director",
                 "replace": "$DIRECTOR_CLASSNAME$",
-                "filename": ""
+                "filename": []
             },
             {
                 "shouldBeVisible": true,
                 "label": "Product class name",
                 "defaultValue": "Product",
                 "replace": "$PRODUCT_CLASSNAME$",
-                "filename": ""
+                "filename": []
             },
             {
                 "shouldBeVisible": true,
                 "label": "Concrete Builder class name",
                 "defaultValue": "ConcreteBuilder",
                 "replace": "$CONCRETE_BUILDER_CLASSNAME1$",
-                "filename": "ConcreteBuilder.java"
+                "filename": ["ConcreteBuilder.java"]
+            },
+            {
+                "shouldBeVisible": true,
+                "label": "TEST",
+                "defaultValue": "TEST",
+                "replace": "$TEST$",
+                "filename": ["ConcreteBuilder.java", "Builder.java"]
             }
         ],
         "selectParams": [
